tests/expectations/parser/functions/const_input_fail.out
Error [EPAR0370005]: expected an identifier, ')', 'constant', 'private', 'public' -- found 'const'
    --> test:3:6
     |
   3 | fn x(const x: u8) -> u8 {}
     |      ^^^^^
